@@ -45,7 +45,7 @@ class ChrootStepRunner(vmdb.StepRunnerInterface):
         mount_point = state.mounts[fs_tag]
 
         vmdb.progress(
-            'chroot {} to {}\n'.format(mount_point, ' '.join(shell.split('\n'))))
+            'chroot {} to {}'.format(mount_point, ' '.join(shell.split('\n'))))
         vmdb.runcmd(['chroot', mount_point, 'sh', '-c', shell])
         
 
@@ -59,7 +59,7 @@ class ShellStepRunner(vmdb.StepRunnerInterface):
         fs_tag = step['root-fs']
 
         vmdb.progress(
-            'run shell {}\n'.format(' '.join(shell.split('\n'))))
+            'run shell {}'.format(' '.join(shell.split('\n'))))
         env = dict(os.environ)
         env['ROOT'] = state.mounts[fs_tag]
         vmdb.runcmd(['sh', '-c', shell], env=env)
