@@ -47,5 +47,5 @@ class DebootstrapStepRunner(vmdb.StepRunnerInterface):
         if not (suite and tag and target and mirror):
             raise Exception('missing arg for debootstrap step')
         vmdb.progress(
-            'Debootstrap {} {} {}\n'.format(suite, target, mirror))
+            'Debootstrap {} {} {}'.format(suite, target, mirror))
         vmdb.runcmd(['debootstrap', suite, target, mirror])
