@@ -37,10 +37,8 @@ class ErrorStepRunner(vmdb.StepRunnerInterface):
         return ['error', 'teardown']
 
     def run(self, step, settings, state):
-        vmdb.progress('ERROR: {}\n'.format(step['error']))
-        logging.error('%s', step['error'])
+        vmdb.error('{}'.format(step['error']))
         raise vmdb.StepError('an error occurred')
 
     def teardown(self, step, settings, state):
-        vmdb.progress('ERROR: {}\n'.format(step['teardown']))
-        logging.error('error cleanup: %s', step['teardown'])
+        vmdb.error('{}'.format(step['teardown']))
